set(TORQUE_CORE_SRCS
	bitRender.cpp
	bitVector.cpp
	color.cpp
	crc.cpp
	dataChunker.cpp
	dnet.cpp
	fileObject.cpp
	filterStream.cpp
	frameAllocator.cpp
	iTickable.cpp
	idGenerator.cpp
	memVolume.cpp
	module.cpp
	ogg/oggInputStream.cpp
	ogg/oggTheoraDecoder.cpp
	ogg/oggVorbisDecoder.cpp
	resizeStream.cpp
	resource.cpp
	resourceManager.cpp
	stream/bitStream.cpp
	stream/fileStream.cpp
	stream/fileStreamObject.cpp
	stream/memStream.cpp
	stream/stream.cpp
	stream/streamObject.cpp
	stringBuffer.cpp
	stringTable.cpp
	strings/findMatch.cpp
	strings/stringFunctions.cpp
	strings/stringUnit.cpp
	strings/unicode.cpp
	tagDictionary.cpp
	threadStatic.cpp
	tokenizer.cpp
	util/byteBuffer.cpp
	util/commonSwizzles.cpp
	util/hashFunction.cpp
	util/journal/journal.cpp
	util/journal/process.cpp
	util/journal/test/testJournal.cpp
	util/journal/test/testProcess.cpp
	util/md5.cpp
	util/path.cpp
	util/rgb2luv.cpp
	util/rgb2xyz.cpp
	util/str.cpp
	util/tDictionary.cpp
	util/tSignal.cpp
	util/tVector.cpp
	util/test/testFixedSizeDeque.cpp
	util/test/testPath.cpp
	util/test/testString.cpp
	util/test/testVector2.cpp
	util/timeClass.cpp
	util/uuid.cpp
	util/zip/centralDir.cpp
	util/zip/compressor.cpp
	util/zip/compressors/deflate.cpp
	util/zip/compressors/stored.cpp
	util/zip/extraField.cpp
	util/zip/fileHeader.cpp
	util/zip/unitTests/zipTestMisc.cpp
	util/zip/unitTests/zipTestRead.cpp
	util/zip/unitTests/zipTestWrite.cpp
	util/zip/zipArchive.cpp
	util/zip/zipCryptStream.cpp
	util/zip/zipObject.cpp
	util/zip/zipSubStream.cpp
	util/zip/zipTempStream.cpp
	util/zip/zipVolume.cpp
	virtualMountSystem.cpp
	volume.cpp
)

set(TORQUE_CORE_HEADERS
	bitMatrix.h
	bitRender.h
	bitSet.h
	bitVector.h
	bitVectorW.h
	color.h
	crc.h
	dataChunker.h
	dnet.h
	fileObject.h
	fileio.h
	filterStream.h
	frameAllocator.h
	iTickable.h
	idGenerator.h
	memVolume.h
	module.h
	ogg/oggInputStream.h
	ogg/oggTheoraDecoder.h
	ogg/oggVorbisDecoder.h
	resizeStream.h
	resource.h
	resourceManager.h
	stream/bitStream.h
	stream/fileStream.h
	stream/fileStreamObject.h
	stream/ioHelper.h
	stream/memStream.h
	stream/stream.h
	stream/streamObject.h
	stream/tStream.h
	stringBuffer.h
	stringTable.h
	strings/findMatch.h
	strings/stringFunctions.h
	strings/stringUnit.h
	strings/unicode.h
	tAlgorithm.h
	tSimpleHashTable.h
	tSparseArray.h
	tagDictionary.h
	threadStatic.h
	tokenizer.h
	util/FastDelegate.h
	util/autoPtr.h
	util/byteBuffer.h
	util/byteswap.h
	util/delegate.h
	util/dxt5nmSwizzle.h
	util/endian.h
	util/fourcc.h
	util/hashFunction.h
	util/journal/journal.h
	util/journal/journaledSignal.h
	util/journal/process.h
	util/md5.h
	util/namedSingleton.h
	util/noncopyable.h
	util/path.h
	util/preprocessorHelpers.h
	util/rawData.h
	util/refBase.h
	util/rgb2luv.h
	util/rgb2xyz.h
	util/safeCast.h
	util/safeDelete.h
	util/safeRelease.h
	util/str.h
	util/swizzle.h
	util/swizzleSpec.h
	util/tAlignedArray.h
	util/tDictionary.h
	util/tFixedSizeDeque.h
	util/tFixedSizeVector.h
	util/tList.h
	util/tNamedFactory.h
	util/tSignal.h
	util/tSingleton.h
	util/tUnmanagedVector.h
	util/tVector.h
	util/tVectorSpecializations.h
	util/timeClass.h
	util/timeSource.h
	util/uuid.h
	util/zip/centralDir.h
	util/zip/compressor.h
	util/zip/crctab.h
	util/zip/extraField.h
	util/zip/fileHeader.h
	util/zip/unitTests/zipTest.h
	util/zip/zipArchive.h
	util/zip/zipCryptStream.h
	util/zip/zipObject.h
	util/zip/zipStatFilter.h
	util/zip/zipSubStream.h
	util/zip/zipTempStream.h
	util/zip/zipVolume.h
	virtualMountSystem.h
	volume.h
)

add_library(${TORQUE_BUILD}_core STATIC ${TORQUE_CORE_SRCS} ${TORQUE_CORE_HEADERS})

