set(TORQUE_GUI_SRCS
	3d/guiTSControl.cpp
	buttons/guiBitmapButtonCtrl.cpp
	buttons/guiBorderButton.cpp
	buttons/guiButtonBaseCtrl.cpp
	buttons/guiButtonCtrl.cpp
	buttons/guiCheckBoxCtrl.cpp
	buttons/guiIconButtonCtrl.cpp
	buttons/guiRadioCtrl.cpp
	buttons/guiSwatchButtonCtrl.cpp
	buttons/guiToggleButtonCtrl.cpp
	buttons/guiToolboxButtonCtrl.cpp
	containers/guiAutoScrollCtrl.cpp
	containers/guiContainer.cpp
	containers/guiCtrlArrayCtrl.cpp
	containers/guiDragAndDropCtrl.cpp
	containers/guiDynamicCtrlArrayCtrl.cpp
	containers/guiFormCtrl.cpp
	containers/guiFrameCtrl.cpp
	containers/guiPaneCtrl.cpp
	containers/guiPanel.cpp
	containers/guiRolloutCtrl.cpp
	containers/guiScrollCtrl.cpp
	containers/guiSplitContainer.cpp
	containers/guiStackCtrl.cpp
	containers/guiTabBookCtrl.cpp
	containers/guiWindowCollapseCtrl.cpp
	containers/guiWindowCtrl.cpp
	controls/guiBackgroundCtrl.cpp
	controls/guiBitmapBorderCtrl.cpp
	controls/guiBitmapCtrl.cpp
	controls/guiColorPicker.cpp
	controls/guiConsole.cpp
	controls/guiConsoleEditCtrl.cpp
	controls/guiConsoleTextCtrl.cpp
	controls/guiDecoyCtrl.cpp
	controls/guiDirectoryFileListCtrl.cpp
	controls/guiFileTreeCtrl.cpp
	controls/guiGameListMenuCtrl.cpp
	controls/guiGameListOptionsCtrl.cpp
	controls/guiGradientCtrl.cpp
	controls/guiListBoxCtrl.cpp
	controls/guiMLTextCtrl.cpp
	controls/guiMLTextEditCtrl.cpp
	controls/guiMaterialCtrl.cpp
	controls/guiPopUpCtrl.cpp
	controls/guiPopUpCtrlEx.cpp
	controls/guiSliderCtrl.cpp
	controls/guiTabPageCtrl.cpp
	controls/guiTextCtrl.cpp
	controls/guiTextEditCtrl.cpp
	controls/guiTextEditSliderBitmapCtrl.cpp
	controls/guiTextEditSliderCtrl.cpp
	controls/guiTextListCtrl.cpp
	controls/guiTreeViewCtrl.cpp
	core/guiArrayCtrl.cpp
	core/guiCanvas.cpp
	core/guiControl.cpp
	core/guiDefaultControlRender.cpp
	core/guiScriptNotifyControl.cpp
	core/guiTypes.cpp
	editor/editorFunctions.cpp
	editor/guiDebugger.cpp
	editor/guiEaseViewCtrl.cpp
	editor/guiEditCtrl.cpp
	editor/guiFilterCtrl.cpp
	editor/guiGraphCtrl.cpp
	editor/guiImageList.cpp
	editor/guiInspector.cpp
	editor/guiInspectorTypes.cpp
	editor/guiMenuBar.cpp
	editor/guiParticleGraphCtrl.cpp
	editor/guiRectHandles.cpp
	editor/guiSeparatorCtrl.cpp
	editor/guiShapeEdPreview.cpp
	editor/inspector/customField.cpp
	editor/inspector/datablockField.cpp
	editor/inspector/dynamicField.cpp
	editor/inspector/dynamicGroup.cpp
	editor/inspector/field.cpp
	editor/inspector/group.cpp
	editor/inspector/variableField.cpp
	editor/inspector/variableGroup.cpp
	editor/inspector/variableInspector.cpp
	game/guiChunkedBitmapCtrl.cpp
	game/guiFadeinBitmapCtrl.cpp
	game/guiIdleCamFadeBitmapCtrl.cpp
	game/guiMessageVectorCtrl.cpp
	game/guiProgressBitmapCtrl.cpp
	game/guiProgressCtrl.cpp
	shiny/guiTickCtrl.cpp
	theora/guiTheoraCtrl.cpp
	utility/guiBubbleTextCtrl.cpp
	utility/guiInputCtrl.cpp
	utility/guiMouseEventCtrl.cpp
	utility/messageVector.cpp
	worldEditor/creator.cpp
	worldEditor/editTSCtrl.cpp
	worldEditor/editor.cpp
	worldEditor/editorIconRegistry.cpp
	worldEditor/gizmo.cpp
	worldEditor/guiConvexShapeEditorCtrl.cpp
	worldEditor/guiDecalEditorCtrl.cpp
	worldEditor/guiMissionArea.cpp
	worldEditor/guiMissionAreaEditor.cpp
	worldEditor/guiTerrPreviewCtrl.cpp
	worldEditor/tSelection.cpp
	worldEditor/terrainActions.cpp
	worldEditor/terrainEditor.cpp
	worldEditor/undoActions.cpp
	worldEditor/worldEditor.cpp
	worldEditor/worldEditorSelection.cpp
)

set(TORQUE_GUI_HEADERS
	3d/guiTSControl.h
	buttons/guiBitmapButtonCtrl.h
	buttons/guiButtonBaseCtrl.h
	buttons/guiButtonCtrl.h
	buttons/guiCheckBoxCtrl.h
	buttons/guiIconButtonCtrl.h
	buttons/guiRadioCtrl.h
	buttons/guiSwatchButtonCtrl.h
	buttons/guiToggleButtonCtrl.h
	buttons/guiToolboxButtonCtrl.h
	containers/guiAutoScrollCtrl.h
	containers/guiContainer.h
	containers/guiCtrlArrayCtrl.h
	containers/guiDragAndDropCtrl.h
	containers/guiDynamicCtrlArrayCtrl.h
	containers/guiFormCtrl.h
	containers/guiFrameCtrl.h
	containers/guiPaneCtrl.h
	containers/guiPanel.h
	containers/guiRolloutCtrl.h
	containers/guiScrollCtrl.h
	containers/guiSplitContainer.h
	containers/guiStackCtrl.h
	containers/guiTabBookCtrl.h
	containers/guiWindowCollapseCtrl.h
	containers/guiWindowCtrl.h
	controls/guiBackgroundCtrl.h
	controls/guiBitmapCtrl.h
	controls/guiColorPicker.h
	controls/guiConsole.h
	controls/guiConsoleEditCtrl.h
	controls/guiConsoleTextCtrl.h
	controls/guiDecoyCtrl.h
	controls/guiDirectoryFileListCtrl.h
	controls/guiFileTreeCtrl.h
	controls/guiGameListMenuCtrl.h
	controls/guiGameListOptionsCtrl.h
	controls/guiGradientCtrl.h
	controls/guiListBoxCtrl.h
	controls/guiMLTextCtrl.h
	controls/guiMLTextEditCtrl.h
	controls/guiMaterialCtrl.h
	controls/guiPopUpCtrl.h
	controls/guiPopUpCtrlEx.h
	controls/guiSliderCtrl.h
	controls/guiTabPageCtrl.h
	controls/guiTextCtrl.h
	controls/guiTextEditCtrl.h
	controls/guiTextEditSliderBitmapCtrl.h
	controls/guiTextEditSliderCtrl.h
	controls/guiTextListCtrl.h
	controls/guiTreeViewCtrl.h
	core/guiArrayCtrl.h
	core/guiCanvas.h
	core/guiControl.h
	core/guiDefaultControlRender.h
	core/guiScriptNotifyControl.h
	core/guiTypes.h
	editor/editorFunctions.h
	editor/guiDebugger.h
	editor/guiEaseViewCtrl.h
	editor/guiEditCtrl.h
	editor/guiFilterCtrl.h
	editor/guiGraphCtrl.h
	editor/guiImageList.h
	editor/guiInspector.h
	editor/guiInspectorTypes.h
	editor/guiMenuBar.h
	editor/guiParticleGraphCtrl.h
	editor/guiRectHandles.h
	editor/guiSeparatorCtrl.h
	editor/guiShapeEdPreview.h
	editor/inspector/customField.h
	editor/inspector/datablockField.h
	editor/inspector/dynamicField.h
	editor/inspector/dynamicGroup.h
	editor/inspector/field.h
	editor/inspector/group.h
	editor/inspector/variableField.h
	editor/inspector/variableGroup.h
	editor/inspector/variableInspector.h
	game/guiFadeinBitmapCtrl.h
	game/guiMessageVectorCtrl.h
	game/guiProgressBitmapCtrl.h
	game/guiProgressCtrl.h
	shiny/guiTickCtrl.h
	theora/guiTheoraCtrl.h
	utility/guiBubbleTextCtrl.h
	utility/guiInputCtrl.h
	utility/guiMouseEventCtrl.h
	utility/messageVector.h
	worldEditor/creator.h
	worldEditor/editTSCtrl.h
	worldEditor/editor.h
	worldEditor/editorIconRegistry.h
	worldEditor/gizmo.h
	worldEditor/guiConvexShapeEditorCtrl.h
	worldEditor/guiDecalEditorCtrl.h
	worldEditor/guiMissionArea.h
	worldEditor/guiMissionAreaEditor.h
	worldEditor/guiTerrPreviewCtrl.h
	worldEditor/tSelection.h
	worldEditor/terrainActions.h
	worldEditor/terrainEditor.h
	worldEditor/undoActions.h
	worldEditor/worldEditor.h
	worldEditor/worldEditorSelection.h
)

add_library(${TORQUE_BUILD}_gui STATIC ${TORQUE_GUI_SRCS} ${TORQUE_GUI_HEADERS})

